--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "rich>=13.7.0",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
+    "imageio-ffmpeg>=0.4.9",
 ]
 
 [project.optional-dependencies]
